# ziacloud-ansible

./: .ansible-lint  .buildinfo  .gitignore  .isort.cfg  .readthedocs.yaml  .releaserc.json  CHANGELOG.md  CHANGELOG.rst  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SUPPORT.md  activation_overview.html  authentication.html  codecov.yml  common_return_values.html  community_guides.html  examples.html  galaxy.yml  genindex.html  index.html  installation.html  license.html  modules.html  objects.inv  pyproject.toml  release_notes.html  requirements.html  requirements.txt  search.html  searchindex.js  support.html  troubleshooting.html
.doctrees/: activation_overview.doctree  authentication.doctree  common_return_values.doctree  community_guides.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  license.doctree  modules.doctree  release_notes.doctree  requirements.doctree  support.doctree  troubleshooting.doctree
.github/: do-release.sh  publishing.md  set-version.sh  update-requirements.py
_sources/: authentication.rst.txt  examples.rst.txt  index.rst.txt  installation.rst.txt  modules.rst.txt  release_notes.rst.txt  requirements.rst.txt  support.rst.txt  troubleshooting.rst.txt
_static/: pygments.css
docs/: contributing.md  dev_requirements.txt  history.md
examples/: zia_activation_status.yml  zia_authentication_settings.yml  zia_cloud_firewall_network_services_groups.yml  zia_dlp_dictionaries.yml  zia_dlp_icap_servers_info.yml  zia_dlp_incident_receiver_servers_info.yml  zia_location_groups.yml  zia_sandbox_submission.yml  zia_security_policy_settings.yml
html/: community_guides.html  examples.html  requirements.html
modules/: zia_activation_status_facts_module.html  zia_activation_status_info_module.html  zia_activation_status_module.html  zia_admin_role_management_facts_module.html  zia_admin_role_management_info_module.html  zia_admin_roles_info_module.html  zia_admin_users_info_module.html  zia_advanced_settings_info_module.html  zia_advanced_settings_module.html  zia_alerts_info_module.html  zia_alerts_module.html  zia_atp_malicious_urls_info_module.html  zia_atp_malicious_urls_module.html  zia_atp_malware_inspection_info_module.html  zia_atp_malware_inspection_module.html  zia_atp_malware_policy_info_module.html  zia_atp_malware_policy_module.html  zia_atp_malware_protocols_info_module.html  zia_atp_malware_protocols_module.html  zia_atp_malware_settings_info_module.html  zia_atp_malware_settings_module.html  zia_atp_security_exceptions_info_module.html  zia_atp_security_exceptions_module.html  zia_atp_settings_info_module.html  zia_atp_settings_module.html  zia_auth_settings_urls_info_module.html  zia_auth_settings_urls_module.html  zia_authentication_settings_info_module.html  zia_authentication_settings_module.html  zia_bandwidth_classes_info_module.html  zia_bandwidth_classes_module.html  zia_bandwidth_control_rules_info_module.html  zia_bandwidth_control_rules_module.html  zia_browser_control_policy_info_module.html  zia_browser_control_policy_module.html  zia_browser_control_supported_versions_info_module.html  zia_casb_dlp_rules_info_module.html  zia_casb_dlp_rules_module.html  zia_casb_email_label_info_module.html  zia_casb_malware_rules_info_module.html  (+155 more)
scripts/: check_coverage.py
tests/: __init__.py  config.yml
(+1029 files in other folders)
