[tool.poetry]
name = "ziacloud-ansible"
version = "1.0.0"
description = "Ansible collection for Zscaler Internet Access"
authors = ["Zscaler Technology Alliances <devrel@zscaler.com>"]
license = "MIT"
keywords = ["ziacloud", "ziacloud-ansible", "zia"]
readme = "README.md"
homepage = "https://github.com/zscaler/ziacloud-ansible"
repository = "https://github.com/zscaler/ziacloud-ansible"

[tool.poetry.dependencies]
python = "^3.9"
zscaler-sdk-python = "*"
xmltodict = "^0.12.0"
aiohttp = ">=3.9.0"
dpath = "^2.1.5"
pytz = "*"
netaddr = "*"
pycountry = "*"
sphinx-ansible-theme = "^0.10.3"

[tool.poetry.dev-dependencies]
black = "24.3.0"
pytest = "*"
coverage = "4.5.4"
pylint = "2.13.*"
pytest-xdist = "*"
pytest-mock = "*"
voluptuous = "*"
yamllint = "*"
sphinx = "^7.0.1"
sphinx-rtd-theme = "*"
sphinx_ansible_theme = "*"
#ansible-doc-extractor = "*"
antsibull-docs = "^2.10.0"
antsibull-changelog = "^0.26.0"
ansible-core = "*"
ansible-lint = "*"
rstcheck = "*"
six = "*"
pycodestyle = "*"

# from requirements.txt
certifi = "^2023.11.17"
chardet = "3.0.4"
idna = "3.7"
requests = "^2.22.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
